fix: enhance text presentation and highlight styles in index page for improved readability and emphasis

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1006,7 +1006,6 @@ fieldset {
 .feature-details__title .focus {
   color: #008080;
   font-size: 3rem;
-  background: linear-gradient(transparent 80%, #ffe44b 60%);
 }
 @media (max-width: 768px) {
   .feature-details__title .focus {
@@ -1402,7 +1401,6 @@ fieldset {
 }
 .use-case__result p span {
   font-size: 2.4rem;
-  background: linear-gradient(transparent 70%, #ffe44b 70%);
 }
 .use-case__result-badge {
   flex: 0 0 auto;
@@ -1947,6 +1945,9 @@ fieldset {
 }
 .asset-steps__result p span {
   color: #008080;
+}
+.asset-steps__result p .highlight {
+  color: #003d3d !important;
 }
 
 /* flow */
